frontend/test/should_fail/param_007.grg
using attrib_model_001;

rule r(a:string)
{
    pattern {
        b:NSTRING;
        if { a == b.a; }
    }
    replace {
    }
}
